Replace deprecated GStaticMutex with GMutex

https://bugzilla.gnome.org/show_bug.cgi?id=662207